--- a/springEx_kim/hello-spring_ex/hello-spring/build.gradle
+++ b/springEx_kim/hello-spring_ex/hello-spring/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //thymeleaf 엔진(html 만드는)
 	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹프로젝트 만들었던것
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
