--- a/springEx_kim/hello-spring_ex/hello-spring/build.gradle
+++ b/springEx_kim/hello-spring_ex/hello-spring/build.gradle
@@ -17,7 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //thymeleaf 엔진(html 만드는)
 	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹프로젝트 만들었던것
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JDBC, JPA 다 포함
 	runtimeOnly 'com.h2database:h2'
 }
 
