--- a/spring_workbook/CH4/springex/src/main/webapp/WEB-INF/web.xml
+++ b/spring_workbook/CH4/springex/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <!-- 서버의 한글 처리 필터 -->
     <filter>
         <filter-name>encoding</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
