--- a/spring_workbook/CH5/b01/build.gradle
+++ b/spring_workbook/CH5/b01/build.gradle
@@ -49,7 +49,9 @@ dependencies {
 
             "com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
 
+    implementation 'org.modelmapper:modelmapper:3.1.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
