--- a/spring_workbook/CH6/PART5/build.gradle
+++ b/spring_workbook/CH6/PART5/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     ext {
         queryDslVersion = "5.0.0"
@@ -6,10 +5,8 @@ buildscript {
 }
 
 
-
-
 plugins {
-    id 'org.springframework.boot' version '2.7.3'
+    id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -59,6 +56,10 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
 }
 
