feat: 23.02.11 공부파일 add

--- a/spring_workbook/CH8/ch7/src/main/resources/application.properties
+++ b/spring_workbook/CH8/ch7/src/main/resources/application.properties
@@ -20,3 +20,17 @@ spring.servlet.multipart.max-file-size=10MB
 
 org.zerock.upload.path=D:\\upload
 
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=617b0365075933d9ea0264421e636f98
+
+spring.security.oauth2.client.registration.kakao.client-secret=J17Rv2lpwYLykeAgTTWLpvycYwJ9MJ2M
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+
