feat: dependencies file add - mariadb 관련 파일 add - jdbc 관련 파일 add

--- a/springEx_kim/hello1/hello-spring/build.gradle
+++ b/springEx_kim/hello1/hello-spring/build.gradle
@@ -16,6 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+
+
 }
 
 tasks.named('test') {
