--- a/springEx_kim/hello1/hello-spring/src/main/resources/application.properties
+++ b/springEx_kim/hello1/hello-spring/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/
+spring.datasource.username=
+spring.datasource.password=
