--- a/springEx_kim/hello1/hello-spring/src/main/resources/application.properties
+++ b/springEx_kim/hello1/hello-spring/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3307/test
+#spring.datasource.username=root
+#spring.datasource.password=64036403?
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
