--- a/springEx_kim/hello1/hello-spring/build.gradle
+++ b/springEx_kim/hello1/hello-spring/build.gradle
@@ -16,11 +16,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-
-
-
+//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        runtimeOnly 'com.h2database:h2'
+    }
 }
 
 tasks.named('test') {
