--- a/springEx_kim/spring_basic/basic/core/build.gradle
+++ b/springEx_kim/spring_basic/basic/core/build.gradle
@@ -30,6 +30,10 @@ dependencies {
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
         //lombok 라이브러리 추가 끝
+        implementation 'javax.inject:javax.inject:1'
+
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+
     }
 
     tasks.named('test') {
