--- a/springEx_kim/spring_JPA1/jpashop/.gitignore
+++ b/springEx_kim/spring_JPA1/jpashop/.gitignore
@@ -35,3 +35,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### properties ###
+src/main/resources/application.properties
+### yml ###
+src/main/resources/aapplication.yml
